[package]
name = "jigsaw"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = "0.18"
yew-autoprops = "0.4.1"
log = "0.4.22"
wasm-logger = "0.2.0"
rand = { version = "0.9.0"}
wasm-bindgen = "0.2.100"
getrandom = { version = "0.3", features = ["wasm_js"] }
wasm-bindgen-futures = "0.4.50"
gloo-timers = { version = "0.3.0", features = ["futures"] }
